WIP: Remove guava usages